Update issue templates

--- a/.github/ISSUE_TEMPLATE/шаблон-проблем.md
+++ b/.github/ISSUE_TEMPLATE/шаблон-проблем.md
@@ -7,12 +7,12 @@ assignees: ''
 
 ---
 
-Как [роль]  
-Я хочу [функция] 
-Чтобы [цель]  
+*Как* [роль]  
+**Я хочу** [функция] 
+**Чтобы** [цель]  
    
  ### Details and Assumptions
-[Опишите детали и предположения]
+* [Опишите детали и предположения]
    
  ### Acceptance Criteria  
    
